Clean code applied.